src/test/deca/codegen/invalid/improvided/dereferencementNULL.deca
class eleve {
int ID;
Math noteMath;
void setID(int a){
  ID = a;
}

}

class Math {
 int note;

}
{
eleve m = null;
int  h = m.ID;
}
